# test-cmake-acetao

./: .gitignore  CMakeLists.txt  Makefile.setup  README.md  main.cpp
cmake/: FindAceTao.cmake  FindAceTaoMPC.cmake  InitAceTao.cmake  idl_files.cmake  init.cmake  tao_idl_sources.cmake
cmake/AceTao/: config.h  platform_macros.x86_64-apple-darwin.GNU
config/: config.x86_64-apple-darwin.h  config.x86_64-pc-windows-msvc.h  config.x86_64-unknown-linux-gnu.h  platform_macros.x86_64-pc-windows-msvc.GNU  platform_macros.x86_64-unknown-linux-gnu.GNU
